# Data-Visualizer

./: .gitignore  README.md
DataSender/DataSender/: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  DataGenerator.cpp  DataGenerator.h  DataSender.cpp  DataSender.h  main.cpp
DataVisualizer/DataVisualizer/: CMakeLists.txt  DataReceiver.cpp  DataReceiver.h  connection.cpp  connection.h  connection.ui  formchangeport.cpp  formchangeport.h  formchangeport.ui  formnoiseprobability.cpp  formnoiseprobability.h  formnoiseprobability.ui  formscaling.cpp  formscaling.h  formscaling.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_algorithm.h  stylesheet.h
Tasks 0-2/: funcsFor0-2.cpp
